fix bugs,add tests and tidy up around use of DateTimeRange when saving graphs, this is WIP. New data version.